@@ -1,4 +1,5 @@
 v0.07.0
+* Added -filter command line option
 * When baking a lightmap without viewdep, a camera is not required in the scene
 * Added -bakedir command line option
 * Added baking.viewdep option to control lightmap baking style
